cahnged some colors added a custom scrollbar fixed a bug on app details page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,12 +2,12 @@
 
 @theme {
     /* PAGE BACKGROUND */
-    --color-iron-950: oklch(0.1 0.01 240);
+    --color-iron-950: oklch(0.12 0.01 240);
 
     /* COMPONENT BACKGROUNDS */
-    --color-iron-900: oklch(0.16 0.01 240);
-    --color-iron-800: oklch(0.24 0.01 240);
-    --color-iron-700: oklch(0.32 0.01 240);
+    --color-iron-900: oklch(0.18 0.01 240);
+    --color-iron-800: oklch(0.28 0.01 240);
+    --color-iron-700: oklch(0.36 0.01 240);
 
     /* ACCENTS */
     --color-forge-400: oklch(0.9 0.22 45);
@@ -45,6 +45,33 @@ body,
     color: #e2e8f0;
     min-height: 100vh;
     font-family: var(--font-sans);
+
+    /* ===== Scrollbar CSS ===== */
+    * {
+        --sb-track-color: var(--color-iron-900);
+        --sb-thumb-color: var(--color-forge-600);
+        --sb-size: 12px;
+    }
+
+    *::-webkit-scrollbar {
+        width: var(--sb-size);
+    }
+
+    *::-webkit-scrollbar-track {
+        background: var(--sb-track-color);
+        border-radius: var(--sb-size);
+    }
+
+    *::-webkit-scrollbar-thumb {
+        background: var(--sb-thumb-color);
+        border-radius: var(--sb-size);
+    }
+
+    @supports not selector(::-webkit-scrollbar) {
+        * {
+            scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+        }
+    }
 }
 
 .test {
